added tests, improved logic, basicly done